corrected contrast issue for hovered links

--- a/style.css
+++ b/style.css
@@ -115,6 +115,15 @@ a {
 }
 a:hover,
 a:focus-visible {
+  background-image: linear-gradient(transparent 50%, var(--light-red) 50%);
+  text-shadow: 0 0 0.25em var(--white), 0 0 0.25em var(--white);
+}
+header a:hover,
+header a:focus-visible,
+.page-footer a:hover,
+.page-footer a:focus-visible {
+  background-image: none;
+  text-shadow: none;
   color: var(--gold);
 }
 a[class^="link"] {
@@ -132,7 +141,7 @@ a[class^="link"] {
   color: var(--navy);
   text-decoration: none;
   box-shadow: var(--bshadow-large);
-  transition: transform 0.4s, color 0.4s;
+  transition: transform 0.4s;
 }
 a[class^="link"]:not(.link-github)::before {
   content: "";
@@ -146,7 +155,9 @@ a[class^="link"]:not(.link-github)::before {
 }
 a[class^="link"]:hover,
 a[class^="link"]:focus-visible {
-  color: var(--gold);
+  background-image: none;
+  text-shadow: none;
+  color: var(--navy);
   transform: scale(1.125);
 }
 .link-github svg {
@@ -179,6 +190,8 @@ a[class^="link"]:focus-visible {
   left: 1rem;
   width: auto;
   height: auto;
+  background-image: none;
+  text-shadow: none;
 }
 ::selection {
   background-color: var(--red);
@@ -282,6 +295,8 @@ nav a::before {
 }
 nav a:hover,
 nav a:focus-visible {
+  background-image: none;
+  text-shadow: none;
   color: var(--red);
 }
 nav a:hover::before,
@@ -632,6 +647,11 @@ h2:not(header h2)::after {
 .features li:hover,
 .features li:focus-within {
   transform: rotate(5deg);
+}
+.features li:hover a,
+.features li:focus-within a {
+  background-image: none;
+  text-shadow: none;
 }
 .features li::before {
   /* decor-safetypin-gold.svg */
